  * Created file AUTHORS to give credits on who the code was written.
  * Marking the upstream homepage and address on README.Debian
  * Changed function indentation style to suit my new favor.
  * Added top-level README documentation, which suggests reading of
    debian/README.Debian
  * debian/postinst: fixed string comparison, it used to say "==", but it
    should have been "="

 -- Junichi Uekawa <dancer@debian.org>  Sun, 23 Dec 2001 14:27:18 +0900

dsh (0.0.16) unstable; urgency=low

  * Removing /etc/dsh{,/group} on purge. Thanks phil (closes: #113737)

 -- Junichi Uekawa <dancer@debian.org>  Sun, 30 Sep 2001 23:38:43 +0900

dsh (0.0.15) unstable; urgency=low

  * The configuration parser gives a warning when dsh.conf is not
    parsable, thanks to neil. (closes: #111413)
  * Please note that since dsh-0.0.14, configuration file format has
    changed slightly.

 -- Junichi Uekawa <dancer@debian.org>  Sat,  8 Sep 2001 04:51:12 +0900

dsh (0.0.14) unstable; urgency=low

  * Configuration file handling is slightly better - now handles spaces in config files :P (planning to make it into guile or something). Handles waitshell, and showmachinenames, and verbose. Changed dsh.conf to reflect this.
  * changed the method of obtaining DSH_VERSION to use dpkg-parsechangelog

 -- Junichi Uekawa <dancer@debian.org>  Tue, 21 Aug 2001 23:16:15 +0900

dsh (0.0.13) unstable; urgency=low

  * Fix manpages so that - is escaped with \ (closes: #108033)

 -- Junichi Uekawa <dancer@debian.org>  Wed,  8 Aug 2001 23:20:06 +0900

dsh (0.0.12) unstable; urgency=low

  * support update-cluster

 -- Junichi Uekawa <dancer@debian.org>  Sun, 29 Jul 2001 01:36:01 +0900

dsh (0.0.11) unstable; urgency=low

  * cleaning up the code.
  * removed -g option from gcc compilation option.

 -- Junichi Uekawa <dancer@debian.org>  Mon,  2 Jul 2001 00:21:54 +0900

dsh (0.0.10) unstable; urgency=low

  * parameter.[ch]: split out files for configuration, and the main program.